web-front/rules/examples/fixtures/ci-scan-project/src/views/fail/StaticEl.vue
<template>
  <el-button type="primary" />
</template>

<script setup lang="ts"></script>
